# libQ

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .rust-pre-push-health.json  AGENTS.md  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  ROADMAP.md  SECURITY.md  build.rs  clippy.toml  lib.rs  rust-toolchain.toml  rustfmt.toml  test_rng_randomness.rs
benches/: Cargo.toml  lib.rs
benches/src/: lib.rs
examples/: Cargo.toml  README.md  cb_kem_example.rs  cb_kem_production_example.rs  cb_kem_simple_example.rs  cb_kem_testing_example.rs  hash_example.rs  keccak_no_std_test.rs  ml_dsa_full_integration_test.rs  ml_dsa_integration_test.rs  ml_dsa_no_std_example.rs  ml_dsa_no_std_trait_test.rs  ml_dsa_working_no_std.rs
examples/wasm-browser-demo/: Cargo.toml  README.md  index.html  package.json
lib-q-aead/: Cargo.toml  README.md  REGISTRY_ANALYSIS.md
lib-q-aead/benches/: aead_benchmarks.rs
lib-q-aead/examples/: basic_usage.rs  no_std_example.rs  performance_benchmarks.rs  security_features.rs
lib-q-aead/src/: duplex_aead.rs  duplex_aead_impl.rs  kem_aead_impl.rs  lib.rs  metadata.rs  plugin.rs  provider.rs  registry.rs  rocca_s.rs  romulus_m.rs  romulus_m_impl.rs  romulus_n.rs  romulus_n_impl.rs  saturnin.rs  saturnin_impl.rs  shake256.rs  shake256_impl.rs  tweak_aead.rs  tweak_aead_impl.rs  wasm.rs
lib-q-aead/tests/: comprehensive_security_tests.rs  hpke_integration_test.rs  integration_tests.rs  security_tests.rs  thread_safety_tests.rs  wasm_smoke.rs
lib-q-ascon/: Cargo.toml  README.md  TESTING.md  build.rs
lib-q-ascon/benches/: ascon.rs  mod.rs
lib-q-ascon/src/: lib.rs
lib-q-ascon/tests/: constant_time.rs  kats_tests.rs  performance.rs  security.rs  state_conversion_tests.rs
lib-q-blind-pcs/: Cargo.toml  README.md
lib-q-blind-pcs/src/: blind_pcs.rs  lib.rs  wasm.rs
lib-q-blind-pcs/tests/: demo_vectors.rs  wasm_smoke.rs
lib-q-blind-token/: Cargo.toml  README.md
lib-q-blind-token/src/: blind_token.rs  error.rs  lib.rs  profile.rs
lib-q-blind-token/tests/: budget_gates.rs  kat_regenerate.rs  kat_vectors.rs  wire_roundtrip.rs
lib-q-cb-kem/: Cargo.toml  README.md  build.rs
lib-q-cb-kem/benches/: kem_api.rs
lib-q-cb-kem/src/: api.rs  benes.rs  bm.rs  controlbits.rs  crypto_hash.rs  decrypt.rs  encrypt.rs  gf.rs  int32_sort.rs  lib.rs  libq_provider.rs  libq_rng.rs  nist_aes_rng.rs  operations.rs  params.rs  pk_gen.rs  root.rs  sk_gen.rs  synd.rs  test_utils.rs  transpose.rs  uint64_sort.rs  util.rs  wasm.rs
lib-q-cb-kem/tests/: integration_test.rs  katkem.sh  nist_ctr_drbg_kat.rs  wasm_smoke.rs
lib-q-core/: .tarpaulin.toml  Cargo.toml  README.md
lib-q-core/src/: aead_semantic.rs  algorithm_registry.rs  api.rs  error.rs  lib.rs  traits.rs  wasm_common.rs
lib-q-core/tests/: coverage_tests.rs  modular_architecture_tests.rs
lib-q-dawn/: Cargo.toml  README.md  SECURITY.md
lib-q-dawn/src/: codec.rs  encoding.rs  error_correction.rs  kem_ops.rs  keygen.rs  lib.rs  ntru_keygen.rs  ntt_polynomial.rs  performance.rs  polynomial.rs  secure_rng.rs  security.rs
lib-q-dawn/tests/: comprehensive_tests.rs  integration_tests.rs  ntru_implementation_tests.rs  parameter_sweep.rs  stress_tests.rs  wasm_tests.rs
lib-q-dkg/: Cargo.toml  README.md
lib-q-dkg/benches/: ct_dudect.rs  run_dudect.sh
lib-q-dkg/fuzz/: Cargo.toml
lib-q-dkg/src/: dkg.rs  error.rs  lib.rs  profile.rs  wasm.rs
lib-q-dkg/tests/: budget_gates.rs  kat_regenerate.rs  kat_vectors.rs  stack_budget.rs  wasm_smoke.rs  wire_roundtrip.rs
lib-q-double-kem/: Cargo.toml  README.md
lib-q-double-kem/src/: double_kem.rs  error.rs  lib.rs  profile.rs  wasm.rs
lib-q-double-kem/tests/: budget_gates.rs  kat_regenerate.rs  kat_vectors.rs  wasm_smoke.rs  wire_roundtrip.rs
lib-q-duplex-aead/: Cargo.toml  README.md  SECURITY.md
lib-q-duplex-aead/benches/: duplex_aead.rs
lib-q-duplex-aead/examples/: dump_duplex_kat.rs
lib-q-duplex-aead/src/: aead.rs  crypto.rs  lib.rs  params.rs  state.rs
lib-q-duplex-aead/tests/: coverage_api.rs  kat.rs  roundtrip.rs
lib-q-fhe/: Cargo.toml  README.md
lib-q-fhe/src/: fhe.rs  lib.rs  wasm.rs
lib-q-fhe/tests/: demo_flow.rs  integration_fhe_blind_pcs.rs  wasm_smoke.rs
lib-q-fn-dsa/: Cargo.toml  README.md
lib-q-fn-dsa/benches/: fn_dsa_bench.rs
lib-q-fn-dsa/docs/: ADVANCED_USAGE.md  CONSTRAINED_DEVICE_SUITE.md  KAT_VERIFICATION.md  NO_STD_GUIDE.md  WASM_GUIDE.md
lib-q-fn-dsa/examples/: advanced_integration.rs  advanced_security_config.rs  fn_dsa_demo.rs  hardware_rng_example.rs  no_std_example.rs  wasm_example.rs
lib-q-fn-dsa/fn-dsa/: Cargo.toml
lib-q-fn-dsa/fn-dsa-comm/: Cargo.toml
lib-q-fn-dsa/fn-dsa-kgen/: Cargo.toml
lib-q-fn-dsa/fn-dsa-sign/: Cargo.toml
lib-q-fn-dsa/fn-dsa-vrfy/: Cargo.toml
lib-q-fn-dsa/src/: lib.rs
lib-q-fn-dsa/tests/: integration_tests.rs  security_tests.rs
lib-q-hash/: Cargo.toml  README.md
lib-q-hash/src/: README.md  block_api.rs  cshake.rs  cshake256.rs  hash_types.rs  internal_block_api.rs  k12.rs  kmac.rs  lib.rs  parallelhash.rs  provider.rs  sha2_hashes.rs  sha3.rs  shake.rs  shake128.rs  shake256.rs  tuplehash.rs  turbo_shake.rs  utils.rs
lib-q-hpke/: Cargo.toml  README.md  SECURITY.md
lib-q-hpke/docs/: API_REFERENCE.md  ARCHITECTURE.md  SECURITY_CONSIDERATIONS.md
lib-q-hpke/examples/: advanced_usage.rs  basic_usage.rs  hpke_interop_negotiation.rs
lib-q-hpke/src/: crypto_provider.rs  lib.rs  (+7 more)
lib-q-hqc/: Cargo.toml  README.md  SECURITY.md
lib-q-intrinsics/: Cargo.toml  README.md
lib-q-k12/: Cargo.toml  README.md  TESTING.md
lib-q-keccak/: Cargo.toml  README.md  build.rs  ci_validation.sh  cross_compile_test.sh
lib-q-keccak-digest/: CHANGELOG.md  Cargo.toml  README.md
lib-q-kem/: Cargo.toml  README.md
lib-q-lattice-zkp/: BLIND_ISSUANCE.md  Cargo.toml  DESIGN.md  README.md
lib-q-mac/: Cargo.toml  README.md
lib-q-mayo/: Cargo.toml  README.md
lib-q-ml-dsa/: Cargo.toml  README.md  build.rs
lib-q-ml-kem/: Cargo.toml  PERF-NTT-HANDOFF.md  README.md  build.rs
lib-q-mve/: Cargo.toml  README.md
lib-q-platform/: Cargo.toml
(+1525 files in other folders)
