# Workspace configuration - uncomment when workspace members are created
[workspace]
members = [
    "lib-q",
    "lib-q-types",
    "lib-q-core",
    "lib-q-keccak",
    "lib-q-k12",
    "lib-q-sha3",
    "lib-q-kem",
    "lib-q-ml-kem",
    "lib-q-ml-dsa",
    "lib-q-platform",
    "lib-q-intrinsics",
    "lib-q-sig",
    "lib-q-hash",
    "lib-q-aead",
    "lib-q-saturnin",
    "lib-q-duplex-aead",
    "lib-q-tweak-aead",
    "lib-q-romulus",
    "lib-q-hpke",
    "lib-q-utils",
    "lib-q-zkp",
    "lib-q-fn-dsa",
    "lib-q-slh-dsa",
    "lib-q-cb-kem",
    "lib-q-random",
    "lib-q-dawn",
    "lib-q-hqc",
    "lib-q-stark",
    "lib-q-stark-air",
    "lib-q-stark-challenger",
    "lib-q-stark-commit",
    "lib-q-stark-dft",
    "lib-q-stark-field",
    "lib-q-stark-field-testing",
    "lib-q-stark-fri",
    "lib-q-stark-interpolation",
    "lib-q-stark-matrix",
    "lib-q-stark-mds",
    "lib-q-stark-merkle",
    "lib-q-stark-mersenne31",
    "lib-q-stark-monty31",
    "lib-q-stark-rayon",
    "lib-q-stark-symmetric",
    "lib-q-stark-util",
    "lib-q-stark-shake256",
    "lib-q-stark-shake128",
    "lib-q-stark-sha3-256",
    "lib-q-poseidon",
    "lib-q-plonky-multilinear-util",
    "lib-q-plonky-keccak-air",
    "lib-q-plonky-lookup",
    "lib-q-plonky-uni-stark",
    "lib-q-plonky-batch-stark",
    "lib-q-plonky",
    "examples"
]
# Standalone cargo-fuzz harness (not a workspace member)
exclude = ["lib-q-zkp/fuzz"]
resolver = "3"

# Workspace package defaults for inherited properties
[workspace.package]
authors = ["Enkom Tech", "Nexlab-One"]
license = "Apache-2.0"
homepage = "https://github.com/Enkom-Tech/libQ"
edition = "2024"
repository = "https://github.com/Enkom-Tech/libQ"
readme = "README.md"
version = "0.0.2"
rust-version = "1.94.1"
description = "Post-quantum cryptography library"
keywords = ["cryptography", "post-quantum", "security", "wasm"]
categories = ["cryptography", "wasm"]

# Workspace dependencies for inherited properties
[workspace.dependencies]
hax-lib = "0.3.6"
blobby = "0.4.0"
# WASM dependencies - shared across all workspace members
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
web-sys = "0.3.91"
wasm-bindgen-test = "0.3.64"
# Common dependencies - shared across all workspace members
zeroize = { version = "1.8.2", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
serde-wasm-bindgen = "0.6.5"
rand_core = { version = "0.10.0", default-features = false }
rand = { version = "0.10.0", default-features = false }
getrandom = { version = "0.4.2", default-features = false }
criterion = "0.8.2"
hex = "0.4.3"
proptest = "1.11.0"
cpufeatures = "0.3.0"
# STARK dependencies
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
pastey = "0.2.1"
spin = "0.10.0"
thiserror = { version = "2.0.18", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
subtle = { version = "2.6.1", default-features = false }
transpose = "0.2.3"
postcard = { version = "1.1.3", default-features = false }
rand_xoshiro = "0.8.0"
rayon = "1.11.0"
digest = "0.11.2"
block-buffer = "0.12.0"
aead = { version = "0.5", default-features = false }

[profile.release-security]
inherits = "release"
panic = "abort"

[profile.dev-security]
inherits = "dev"
panic = "unwind"

[profile.dev-no-std]
inherits = "dev"
panic = "abort"

# Package-specific profiles
[profile.dev-cb-kem]
inherits = "dev"
opt-level = 1 # reduces runtime for KATNUM=2 from 281s to 11s

# lib-q-dawn: n=1024 KEM and PKE histogram tests are slow at workspace dev defaults; optimize this crate only.
[profile.dev.package.lib-q-dawn]
opt-level = 2

[profile.release-cb-kem]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev-fn-dsa]
inherits = "dev"
opt-level = 0
debug = true
lto = false
panic = "unwind"

[profile.release-fn-dsa]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

# Additional security hardening options can be added here
