# Workspace configuration - uncomment when workspace members are created
[workspace]
members = [
    "lib-q",
    "lib-q-types",
    "lib-q-core",
    "lib-q-keccak",
    "lib-q-k12",
    "lib-q-sha3",
    "lib-q-keccak-digest",
    "lib-q-kem",
    "lib-q-ml-kem",
    "lib-q-ml-dsa",
    "lib-q-ring",
    "lib-q-sca-test",
    "lib-q-lattice-zkp",
    "lib-q-ring-sig",
    "lib-q-prf",
    "lib-q-platform",
    "lib-q-intrinsics",
    "lib-q-sig",
    "lib-q-hash",
    "lib-q-aead",
    "lib-q-saturnin",
    "lib-q-duplex-aead",
    "lib-q-tweak-aead",
    "lib-q-romulus",
    "lib-q-hpke",
    "lib-q-utils",
    "lib-q-zkp",
    "lib-q-fn-dsa",
    "lib-q-slh-dsa",
    "lib-q-cb-kem",
    "lib-q-random",
    "lib-q-hqc",
    "lib-q-hqc/traits",
    "lib-q-stark",
    "lib-q-stark-air",
    "lib-q-stark-challenger",
    "lib-q-stark-commit",
    "lib-q-stark-dft",
    "lib-q-stark-field",
    "lib-q-stark-field-testing",
    "lib-q-stark-fri",
    "lib-q-stark-interpolation",
    "lib-q-stark-matrix",
    "lib-q-stark-mds",
    "lib-q-stark-merkle",
    "lib-q-stark-mersenne31",
    "lib-q-stark-monty31",
    "lib-q-stark-rayon",
    "lib-q-stark-symmetric",
    "lib-q-stark-util",
    "lib-q-stark-shake256",
    "lib-q-stark-shake128",
    "lib-q-stark-sha3-256",
    "lib-q-poseidon",
    "lib-q-plonky-multilinear-util",
    "lib-q-plonky-keccak-air",
    "lib-q-plonky-lookup",
    "lib-q-plonky-uni-stark",
    "lib-q-plonky-batch-stark",
    "lib-q-plonky",
    "examples",
    "examples/wasm-browser-demo"
]
# Standalone cargo-fuzz harness (not a workspace member)
exclude = ["lib-q-zkp/fuzz", "lib-q-lattice-zkp/fuzz", "lib-q-ring-sig/fuzz", "lib-q-prf/fuzz"]
resolver = "3"

# Workspace package defaults for inherited properties
[workspace.package]
authors = ["Enkom Tech", "Nexlab-One"]
license = "Apache-2.0"
homepage = "https://github.com/Enkom-Tech/libQ"
edition = "2024"
repository = "https://github.com/Enkom-Tech/libQ"
readme = "README.md"
version = "0.0.4"
rust-version = "1.94.1"
description = "Post-quantum cryptography library"
keywords = ["cryptography", "post-quantum", "security", "wasm"]
categories = ["cryptography", "wasm"]

# Workspace dependencies for inherited properties
[workspace.dependencies]
hax-lib = "0.3.7"
blobby = "0.4.0"
# WASM dependencies - shared across all workspace members
wasm-bindgen = "0.2.122"
js-sys = "0.3.99"
web-sys = "0.3.99"
wasm-bindgen-test = "0.3.72"
# Common dependencies - shared across all workspace members
zeroize = { version = "1.8.2", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.150", default-features = false }
serde-wasm-bindgen = "0.6.5"
rand_core = { version = "0.10.1", default-features = false }
rand = { version = "0.10.1", default-features = false }
# Still used by lib-q-hqc, lib-q-slh-dsa (tests), lib-q-lattice-zkp, etc. Remove when follow-up ChaCha cleanup lands.
rand_chacha = { version = "0.10.0", default-features = false }
getrandom = { version = "0.4.2", default-features = false }
criterion = "0.8.2"
hex = "0.4.3"
hybrid-array = { version = "0.4.12", features = ["zeroize"] }
proptest = "1.11.0"
cpufeatures = "0.3.0"
# STARK dependencies
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
pastey = "0.2.3"
spin = "0.12.0"
thiserror = { version = "2.0.18", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
subtle = { version = "2.6.1", default-features = false }
crypto-bigint = { version = "0.7.3", default-features = false }
transpose = "0.2.3"
postcard = { version = "1.1.3", default-features = false }
rand_xoshiro = "0.8.1"
rayon = "1.12.0"
digest = "0.11.3"
sha2 = { version = "0.11.0", default-features = false }
block-buffer = "0.12.0"
aead = { version = "0.5.2", default-features = false }
aes = { version = "0.9.0", default-features = false }
hex-literal = "1.1.0"
base16ct = { version = "1.0.0", features = ["alloc"] }
num-traits = "0.2.19"

# CI and large `cargo test` runs: keep release optimizations and security flags from `.cargo/config.toml`
# `[profile.release]` (LTO + codegen-units=1) makes workspace test linking dominate job time.
[profile.release-ci]
inherits = "release"
lto = false
codegen-units = 256
# `.cargo/config.toml` sets `[profile.release] panic = "abort"`. `cargo test --profile release-ci`
# must use unwind so the lib test harness can link workspace crates that use mixed rustc outputs
# (e.g. `lib-q-utils`, `lib-q-core`); abort in dependencies is rejected when the test crate is unwind.
panic = "unwind"
# Avoid incremental + `lib-q-core` fingerprint races that surface as E0460
# ("possibly newer version of crate `lib_q_core`") when downstream rlibs link the unsuffixed
# `liblib_q_core.rlib` companion artefact.
incremental = false

[profile.release-security]
inherits = "release"
panic = "abort"

[profile.dev-security]
inherits = "dev"
panic = "unwind"

[profile.dev-no-std]
inherits = "dev"
panic = "abort"

# Package-specific profiles
[profile.dev-cb-kem]
inherits = "dev"
opt-level = 1 # reduces runtime for KATNUM=2 from 281s to 11s

[profile.release-cb-kem]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev-fn-dsa]
inherits = "dev"
opt-level = 0
debug = true
lto = false
panic = "unwind"

[profile.release-fn-dsa]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

# `cargo test` builds path dependencies with the dev profile. FN-DSA signing and
# keygen at high logn are unusably slow without LLVM optimization (multi-minute
# KAT/self tests in debug). Match the practical cost of `cargo test -p lib-q-fn-dsa-alg --release`.
[profile.dev.package."lib-q-fn-dsa-alg"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-comm"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-kgen"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-sign"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-vrfy"]
opt-level = 2

# Root crate of `cargo test -p lib-q-fn-dsa-alg` uses the test profile for the library.
[profile.test.package."lib-q-fn-dsa-alg"]
opt-level = 2

# Additional security hardening options can be added here

# crates.io proc-macro-error2 2.0.1 triggers E0365 (private `proc_macro` re-export;
# rust-lang/rust#127909). Vendored copy matches upstream 2.0.1 sources with
# `pub extern crate proc_macro` so nested `pub use proc_macro` in `__export` is legal.
[patch.crates-io]
proc-macro-error2 = { path = "vendor/proc-macro-error2" }
