[workspace]
members = [
    # Core / umbrella
    "lib-q",
    "lib-q-core",
    "lib-q-intrinsics",
    "lib-q-platform",
    "lib-q-random",
    "lib-q-types",
    "lib-q-utils",
    # Hash & digest
    "lib-q-hash",
    "lib-q-k12",
    "lib-q-keccak",
    "lib-q-keccak-digest",
    "lib-q-sha3",
    # KEM
    "lib-q-cb-kem",
    "lib-q-hqc",
    "lib-q-hqc/traits",
    "lib-q-kem",
    "lib-q-ml-kem",
    # Signatures
    "lib-q-fn-dsa",
    "lib-q-ml-dsa",
    "lib-q-ring-sig",
    "lib-q-sig",
    "lib-q-slh-dsa",
    # AEAD & HPKE
    "lib-q-aead",
    "lib-q-duplex-aead",
    "lib-q-hpke",
    "lib-q-rocca-s",
    "lib-q-romulus",
    "lib-q-saturnin",
    "lib-q-tweak-aead",
    # consumer-protocol-agnostic advanced primitives (opt-in; pre-standard cores marked PROVISIONAL)
    "lib-q-mac",
    "lib-q-threshold-sig",
    "lib-q-threshold-kem",
    "lib-q-double-kem",
    "lib-q-fhe",
    "lib-q-blind-pcs",
    "lib-q-dkg",
    "lib-q-threshold-raccoon",
    "lib-q-blind-token",
    # ZKP & lattice
    "lib-q-lattice-zkp",
    "lib-q-mve",
    "lib-q-prf",
    "lib-q-ring",
    "lib-q-transcript",
    "lib-q-zkp",
    # STARK
    "lib-q-stark",
    "lib-q-stark-air",
    "lib-q-stark-baby-bear",
    "lib-q-stark-challenger",
    "lib-q-stark-commit",
    "lib-q-stark-dft",
    "lib-q-stark-field",
    "lib-q-stark-field-testing",
    "lib-q-stark-fri",
    "lib-q-stark-interpolation",
    "lib-q-stark-matrix",
    "lib-q-stark-mds",
    "lib-q-stark-merkle",
    "lib-q-stark-mersenne31",
    "lib-q-stark-monty31",
    "lib-q-stark-rayon",
    "lib-q-stark-shake128",
    "lib-q-stark-shake256",
    "lib-q-stark-sha3-256",
    "lib-q-stark-symmetric",
    "lib-q-stark-util",
    # Plonky & hash gadgets
    "lib-q-plonky",
    "lib-q-plonky-batch-stark",
    "lib-q-plonky-keccak-air",
    "lib-q-plonky-lookup",
    "lib-q-plonky-multilinear-util",
    "lib-q-plonky-uni-stark",
    "lib-q-poseidon",
    # Testing & tooling
    "lib-q-sca-test",
    # Examples
    "examples",
    "examples/wasm-browser-demo",
]
# Standalone cargo-fuzz harnesses (not workspace members).
exclude = [
    "lib-q-zkp/fuzz",
    "lib-q-lattice-zkp/fuzz",
    "lib-q-ring-sig/fuzz",
    "lib-q-prf/fuzz",
    "lib-q-threshold-sig/fuzz",
    "lib-q-threshold-kem/fuzz",
    "lib-q-double-kem/fuzz",
    "lib-q-dkg/fuzz",
    "lib-q-threshold-raccoon/fuzz",
]
# Also outside the workspace: `benches/` (standalone Criterion runner) and
# `lib-q-fn-dsa/fn-dsa-*` (nested path deps under `lib-q-fn-dsa`).
resolver = "3"

[workspace.package]
authors = ["Enkom Tech", "Nexlab-One"]
license = "Apache-2.0"
homepage = "https://github.com/Enkom-Tech/libQ"
edition = "2024"
repository = "https://github.com/Enkom-Tech/libQ"
readme = "README.md"
version = "0.0.8"
rust-version = "1.96.0"
description = "Post-quantum cryptography library"
keywords = ["cryptography", "post-quantum", "security", "wasm"]
categories = ["cryptography", "wasm"]

[workspace.dependencies]
# Misc
hax-lib = "0.3.7"
blobby = "0.4.0"
# WASM
wasm-bindgen = "0.2.122"
js-sys = "0.3.99"
web-sys = "0.3.99"
wasm-bindgen-test = "0.3.72"
# Crypto & security
zeroize = { version = "1.8.2", default-features = false }
subtle = { version = "2.6.1", default-features = false }
hybrid-array = { version = "0.4.12", features = ["zeroize"] }
digest = "0.11.3"
sha2 = { version = "0.11.0", default-features = false }
block-buffer = "0.12.0"
aead = { version = "0.6.1", default-features = false }
aes = { version = "0.9.1", default-features = false }
crypto-bigint = { version = "0.7.4", default-features = false }
# RNG & entropy
rand_core = { version = "0.10.1", default-features = false }
rand = { version = "0.10.1", default-features = false }
getrandom = { version = "0.4.3", default-features = false }
# Serialization
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.150", default-features = false }
serde-wasm-bindgen = "0.6.5"
postcard = { version = "1.1.3", default-features = false }
# Testing & dev
criterion = "0.8.2"
hex = "0.4.3"
hex-literal = "1.1.0"
proptest = "1.11.0"
cpufeatures = "0.3.0"
# Errors & diagnostics
thiserror = { version = "2.0.18", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
# STARK / proof-system
itertools = { version = "0.15.0", default-features = false, features = ["use_alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = "0.2.19"
pastey = "0.2.3"
spin = "0.12.0"
transpose = "0.2.3"
rayon = "1.12.0"
base16ct = { version = "1.0.0", features = ["alloc"] }

# CI profiles — faster `cargo test` linking without changing release artifact settings.
[profile.release-ci]
inherits = "release"
lto = false
codegen-units = 256
# `.cargo/config.toml` sets `[profile.release] panic = "abort"`. `cargo test --profile release-ci`
# must use unwind so the lib test harness can link workspace crates that use mixed rustc outputs
# (e.g. `lib-q-utils`, `lib-q-core`); abort in dependencies is rejected when the test crate is unwind.
panic = "unwind"
# Avoid incremental + `lib-q-core` fingerprint races that surface as E0460
# ("possibly newer version of crate `lib_q_core`") when downstream rlibs link the unsuffixed
# `liblib_q_core.rlib` companion artefact.
incremental = false

[profile.release-security]
inherits = "release"
panic = "abort"

[profile.dev-security]
inherits = "dev"
panic = "unwind"

[profile.dev-no-std]
inherits = "dev"
panic = "abort"

# Crate-specific profiles
# NOTE: lib-q-blind-token's secure instance does heavy f64 (canonical-embedding perturbation
# sampler, per-slot Cholesky), large-modulus NTT, and millions of RNG draws per keygen; at
# opt-level 0 a single keygen takes minutes. Like lib-q-fn-dsa, its test suite is intended to run
# optimized — use `cargo test --release -p lib-q-blind-token` (CI runs it under `release-ci` and
# skips the unoptimized dev pass). A `[profile.test.package]` override cannot help here because such
# overrides do not apply to the root crate being tested, only to its dependencies.
[profile.dev-cb-kem]
inherits = "dev"
opt-level = 1 # reduces runtime for KATNUM=2 from 281s to 11s

[profile.release-cb-kem]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev-fn-dsa]
inherits = "dev"
opt-level = 0
debug = true
lto = false
panic = "unwind"

[profile.release-fn-dsa]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

# `cargo test` builds path dependencies with the dev profile. FN-DSA signing and
# keygen at high logn are unusably slow without LLVM optimization (multi-minute
# KAT/self tests in debug). Match the practical cost of `cargo test -p lib-q-fn-dsa-alg --release`.
[profile.dev.package."lib-q-fn-dsa-alg"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-comm"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-kgen"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-sign"]
opt-level = 2
[profile.dev.package."lib-q-fn-dsa-vrfy"]
opt-level = 2

# Root crate of `cargo test -p lib-q-fn-dsa-alg` uses the test profile for the library.
[profile.test.package."lib-q-fn-dsa-alg"]
opt-level = 2

# crates.io proc-macro-error2 2.0.1 triggers E0365 (private `proc_macro` re-export;
# rust-lang/rust#127909). Vendored copy matches upstream 2.0.1 sources with
# `pub extern crate proc_macro` so nested `pub use proc_macro` in `__export` is legal.
[patch.crates-io]
proc-macro-error2 = { path = "vendor/proc-macro-error2" }
# Vendored to disable clap's `color` feature (→ unmaintained atty/ansi_term). See
# vendor/dudect-bencher/Cargo.toml. Dev/bench-only (lib-q-dkg ct_dudect bench).
dudect-bencher = { path = "vendor/dudect-bencher" }
