[package]
name = "lib-q-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Examples for lib-Q post-quantum cryptography library"
license.workspace = true

[dependencies]
libq = { path = "..", package = "lib-q" }
lib-q-hash = { path = "../lib-q-hash" }
lib-q-core = { path = "../lib-q-core" }
lib-q-kem = { path = "../lib-q-kem", features = ["ml-kem"] }
lib-q-sig = { path = "../lib-q-sig", features = ["std", "ml-dsa"] }
lib-q-keccak = { path = "../lib-q-keccak", default-features = false }
lib-q-cb-kem = { path = "../lib-q-cb-kem" }

[[example]]
name = "hash_example"
path = "hash_example.rs"

[[example]]
name = "keccak_no_std_test"
path = "keccak_no_std_test.rs"
required-features = []

[[example]]
name = "cb_kem_example"
path = "cb_kem_example.rs"

[[example]]
name = "cb_kem_simple_example"
path = "cb_kem_simple_example.rs"

[[example]]
name = "cb_kem_production_example"
path = "cb_kem_production_example.rs"

[[example]]
name = "cb_kem_testing_example"
path = "cb_kem_testing_example.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cb-kem"))',
] }