[package]
name = "lib-q-aead"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Post-quantum Authenticated Encryption for lib-Q"
license.workspace = true
repository.workspace = true
keywords = ["cryptography", "post-quantum", "aead", "authenticated-encryption"]
categories = ["cryptography"]
readme.workspace = true

[dependencies]
lib-q-core = { path = "../lib-q-core" }
lib-q-types = { path = "../lib-q-types", default-features = false }
lib-q-saturnin = { path = "../lib-q-saturnin", optional = true }
lib-q-hash = { path = "../lib-q-hash", optional = true }
lib-q-sha3 = { path = "../lib-q-sha3", optional = true }
lib-q-random = { path = "../lib-q-random", optional = true }
lib-q-duplex-aead = { path = "../lib-q-duplex-aead", optional = true }
lib-q-tweak-aead = { path = "../lib-q-tweak-aead", optional = true }
once_cell = "1.21.3"

[features]
default = ["alloc", "std", "shake256"]
std = ["lib-q-core/std"]
alloc = ["lib-q-core/alloc"]
saturnin = ["dep:lib-q-saturnin", "lib-q-saturnin/aead", "lib-q-saturnin/alloc"]
shake256 = ["dep:lib-q-sha3", "lib-q-sha3/alloc", "dep:lib-q-random", "lib-q-random/std"]
kem-aead = ["shake256"]  # KEM AEAD uses the same dependencies as SHAKE256
duplex-sponge-aead = [
    "dep:lib-q-duplex-aead",
    "lib-q-duplex-aead/alloc",
    "lib-q-duplex-aead/std",
]
tweak-aead = [
    "dep:lib-q-tweak-aead",
    "lib-q-tweak-aead/alloc",
    "lib-q-tweak-aead/std",
]

[lib]
name = "lib_q_aead"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["shake256", "std"]

[[example]]
name = "security_features"
path = "examples/security_features.rs"
required-features = ["shake256", "std"]

[[example]]
name = "performance_benchmarks"
path = "examples/performance_benchmarks.rs"
required-features = ["shake256", "std"]

[[example]]
name = "no_std_example"
path = "examples/no_std_example.rs"
required-features = ["shake256"]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
hex = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(std)',
] }