[package]
name = "lib-q-aead"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Post-quantum Authenticated Encryption for lib-Q"
license.workspace = true
repository.workspace = true
keywords = ["cryptography", "post-quantum", "aead", "encryption"]
categories = ["cryptography"]
readme.workspace = true

[dependencies]
lib-q-core = { path = "../lib-q-core", version = "0.0.5" }
lib-q-types = { path = "../lib-q-types", version = "0.0.5", default-features = false }
lib-q-saturnin = { path = "../lib-q-saturnin", version = "0.0.5", optional = true }
lib-q-hash = { path = "../lib-q-hash", version = "0.0.5", optional = true }
lib-q-sha3 = { path = "../lib-q-sha3", version = "0.0.5", optional = true }
lib-q-random = { path = "../lib-q-random", version = "0.0.5", optional = true }
lib-q-duplex-aead = { path = "../lib-q-duplex-aead", version = "0.0.5", optional = true }
lib-q-tweak-aead = { path = "../lib-q-tweak-aead", version = "0.0.5", optional = true }
lib-q-romulus = { path = "../lib-q-romulus", version = "0.0.5", optional = true, default-features = false }
subtle = { workspace = true, default-features = false }
zeroize = { workspace = true, default-features = false, optional = true }
once_cell = "1.21.4"
spin = { workspace = true }

wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["Window", "Performance"] }
serde_json = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["alloc", "std", "shake256"]
std = ["lib-q-core/std"]
alloc = ["lib-q-core/alloc"]
# Enables optional `zeroize` without `shake256`; also satisfies workspace `cargo metadata --features zeroize`.
zeroize = ["dep:zeroize"]
saturnin = ["dep:lib-q-saturnin", "lib-q-saturnin/aead", "lib-q-saturnin/alloc"]
shake256 = [
    "dep:lib-q-sha3",
    "lib-q-sha3/alloc",
    "dep:lib-q-random",
    "lib-q-random/std",
    "dep:zeroize",
]
duplex-sponge-aead = [
    "dep:lib-q-duplex-aead",
    "lib-q-duplex-aead/alloc",
    "lib-q-duplex-aead/std",
]
tweak-aead = [
    "dep:lib-q-tweak-aead",
    "lib-q-tweak-aead/alloc",
    "lib-q-tweak-aead/std",
]
romulus-n = [
    "dep:lib-q-romulus",
    "lib-q-romulus/alloc",
]
romulus-m = [
    "dep:lib-q-romulus",
    "lib-q-romulus/alloc",
]
romulus = ["romulus-n", "romulus-m"]
wasm = [
    "alloc",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde_json",
    "dep:serde-wasm-bindgen",
    "lib-q-core/wasm",
    "lib-q-core/wasm_getrandom",
    "lib-q-saturnin/wasm",
    "saturnin",
    "duplex-sponge-aead",
    "romulus",
]

[lib]
bench = false
name = "lib_q_aead"
path = "src/lib.rs"
# wasm-pack requires `cdylib` for wasm32; `rlib` remains for Rust consumers. Native no_std CI enables `no_std_panic_handler` where applicable.
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["shake256", "std"]

[[example]]
name = "security_features"
path = "examples/security_features.rs"
required-features = ["shake256", "std"]

[[example]]
name = "performance_benchmarks"
path = "examples/performance_benchmarks.rs"
required-features = ["shake256", "std"]

[[example]]
name = "no_std_example"
path = "examples/no_std_example.rs"
required-features = ["shake256"]

[[test]]
name = "wasm_smoke"
path = "tests/wasm_smoke.rs"
required-features = ["wasm", "saturnin", "alloc"]

[dev-dependencies]
hex = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "aead_benchmarks"
path = "benches/aead_benchmarks.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(std)',
] }