[package]
name = "lib-q-ascon"
version.workspace = true
description = "Pure Rust implementation of the Ascon permutation for lib-Q"
authors = [
    "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
    "RustCrypto Developers",
    "Nexlab-One",
    "Enkom Tech"
]
license.workspace = true
documentation = "https://docs.rs/lib-q-ascon"
homepage = "https://github.com/Enkom-Tech/libQ/tree/main/lib-q-sponge/ascon"
repository.workspace = true
keywords = ["Ascon", "crypto", "permutation", "lib-q"]
categories = ["cryptography", "no-std"]
readme.workspace = true
edition.workspace = true
rust-version = "1.89"

[dependencies]
zeroize = { version = "1.8.1", default-features = false, optional=true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = "0.9.2"

[features]
default = ["std"]
std = [] # Enable std library support
no_unroll = [] # Do not unroll loops for binary size reduction
nightly = [] # Enable nightly-only features like benchmarking

[lib]
name = "lib_q_ascon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[[bench]]
name = "ascon"
harness = false
