[package]
name = "lib-q-ascon"
version.workspace = true
description = "Pure Rust implementation of the Ascon permutation for lib-Q"
authors = [
    "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
    "RustCrypto Developers",
    "Nexlab-One",
    "Enkom Tech"
]
license.workspace = true
documentation = "https://docs.rs/lib-q-ascon"
homepage = "https://github.com/Enkom-Tech/libQ/tree/main/lib-q-sponge/ascon"
repository.workspace = true
keywords = ["Ascon", "crypto", "permutation", "lib-q"]
categories = ["cryptography", "no-std"]
readme.workspace = true
edition.workspace = true
rust-version = "1.89"

[dependencies]
zeroize = { workspace = true, default-features = false, optional=true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
lib-q-random = { path = "../lib-q-random", features = ["std"] }
rand_core = { workspace = true }

[features]
default = ["std"]
std = [] # Enable std library support
no_std = [] # Explicit no_std feature flag for clarity
no_unroll = [] # Do not unroll loops for binary size reduction
nightly = [] # Enable nightly-only features like benchmarking
no_std_panic_handler = [] # Enable panic handler for pure no_std builds only

[lib]
name = "lib_q_ascon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }

[[bench]]
name = "ascon"
harness = false
